Add deployment instructions.